# smallpt-enoki-optix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  kernel_test.cu
cmake/: FindOptiX.cmake
src/: add_math.h  coordframe.h  enoki_entry.h  fimage.h  kernel.cu  lambert.h  main.cpp  mapping.h  optixdata.h  pinhole.h  ray.h  wavefront_isect.cu
src/accel/: optix_backend.h  optix_prime_backend.h
